--- a/frontend/src/app/modules/features/employer/job-detail-view/job-detail-view.component.html
+++ b/frontend/src/app/modules/features/employer/job-detail-view/job-detail-view.component.html
@@ -47,7 +47,10 @@
                       {{postedJobsDetails?.city ? postedJobsDetails?.city + ', ' : ''}}
                       {{postedJobsDetails?.state ? postedJobsDetails?.state + ', ' : ''}}
                       <!-- {{postedJobsDetails?.zipcode ? postedJobsDetails?.zipcode + ', ' : ''}} -->
-                      {{postedJobsDetails?.country ? postedJobsDetails?.country : ''}}
+                      <span class="text-uppercase">
+                        {{postedJobsDetails?.country ? postedJobsDetails?.country : ''}}
+                        </span>
+
                     </h6>
                   </div>
                 </div>
