--- a/frontend/src/app/modules/features/common/find-candidates/find-candidates.component.html
+++ b/frontend/src/app/modules/features/common/find-candidates/find-candidates.component.html
@@ -73,12 +73,14 @@
                       <h6 class="text-capitalize">
                         {{item?.city ? item?.city : ''}}
                         {{item?.state ? ', ' + item?.state : ''}}
-                        {{item?.country ? ', ' + item?.country : ''}}
+                        <span class="text-uppercase">
+                          {{item?.country ? ', ' + item?.country : ''}}
+                        </span>
                       </h6>
                       <h6>{{item?.experience ? 'Total Years Exp: ' + item?.experience : ''}}
                         <span *ngIf="item?.sap_experience">, {{item?.sap_experience ? 'SAP Exp: ' + item?.sap_experience : ''}}</span>
                       </h6>
-                      <h6 *ngIf="item?.job_type">{{item?.job_type ? sharedService.onGetJobType(item?.job_type) : ''}}</h6>
+                      <h6 *ngIf="(item?.job_type || item?.job_type == 0)">{{(item?.job_type || item?.job_type == 0) ? sharedService.onGetJobType(item?.job_type) : ''}}</h6>
                       <h6 *ngIf="item?.availability || item?.availability == 0">
                        Availability: {{(item?.availability || item?.availability == 0) ? (item?.availability == 0 ? 'Immediate' : item?.availability + ' Days') : '--'}}
                       </h6>
