--- a/frontend/src/app/modules/features/employer/modal/job-preview/job-preview.component.html
+++ b/frontend/src/app/modules/features/employer/modal/job-preview/job-preview.component.html
@@ -22,7 +22,10 @@
                   <h6 class="text-capitalize">
                     {{jobInfo?.city ? jobInfo?.city + ', ' : ''}}
                     {{jobInfo?.state ? jobInfo?.state + ', ' : ''}}
-                    {{jobInfo?.country ? jobInfo?.country : ''}}
+                    <span class="text-uppercase">
+                      {{jobInfo?.country ? jobInfo?.country : ''}}
+                    </span>
+
                   </h6>
                 </div>
               </div>
