--- a/frontend/src/app/shared/component/modal/send-mail-job-preview/send-mail-job-preview.component.html
+++ b/frontend/src/app/shared/component/modal/send-mail-job-preview/send-mail-job-preview.component.html
@@ -21,7 +21,9 @@
                 <h6 class=" text-capitalize">
                   {{jobInfo?.city ? jobInfo?.city : ''}}
           {{jobInfo?.state ? ', ' + jobInfo?.state : ''}}
-          {{jobInfo?.country ? ', ' + jobInfo?.country : ''}}
+          <span class="text-uppercase">
+            {{jobInfo?.country ? ', ' + jobInfo?.country : ''}}
+          </span>
                 </h6>
               </div>
             </div>
