--- a/frontend/src/app/modules/features/employer/employer-candidate-profile-matches/employer-candidate-profile-matches.component.html
+++ b/frontend/src/app/modules/features/employer/employer-candidate-profile-matches/employer-candidate-profile-matches.component.html
@@ -87,7 +87,7 @@
                           <a ref="javascript:;" (click)="onToggleResumeForm(true)" class="mr-3" data-toggle="modal" data-target="#resumeModal">
                             <small><i class="fas fa-file-alt"></i> Resume</small>
                           </a>
-                          <a href="#" class="mr-3" data-toggle="modal" data-target="#matchpostModal">
+                          <a (click)="onViewOtherMatches()" href="javascript:;" class="mr-3" data-toggle="modal" data-target="#matchpostModal">
                             <small><i class="fab fa-buffer"></i> View Other Matches</small>
                           </a>
                         </form>
