--- a/frontend/src/app/modules/features/employer/saved-profile/saved-profile.component.html
+++ b/frontend/src/app/modules/features/employer/saved-profile/saved-profile.component.html
@@ -7,55 +7,73 @@
           <label>{{"home.search" | translate}} : </label>
           </div>
           <div class="form-group">
-          <input type="text" class="form-control form-control-sm" placeholder="By Name, Designation, Location..." style="min-width:400px;">
+          <input [formControl]="searchField" type="text" class="form-control form-control-sm" placeholder="By Name, Location..." style="min-width:400px;">
           </div>
         </form>
       </div>
     </div>
-    <ng-container *ngFor="let row of chunk(savedProfile, 3); let i = index">
-      <div class="row mb-5" >
-        <div class="col-lg-4" *ngFor="let item of row">
-          <div class="card job-card sm">
-            <div class="card-body">
-              <a href="job-candidate-profile-view.html">
-                <h5 class="text-capitalize mb-0">
-                  {{item?.first_name + ' ' + item?.last_name}}
-                </h5>
-                <h5 class="text-capitalize"><small *ngIf="item?.job_role">{{item?.job_role}}</small></h5>
-              </a>
-              <div class="save-icon active" data-toggle="tooltip" title="Save"><i class="far fa-bookmark"></i></div>
-              <div class="media">
-                <img style="width:36px;" [src]="item?.photo ? (savedProfileMeta?.photo?.path+'/'+ savedProfileMeta?.photo?.folder+'/'+savedProfileMeta?.photo?.sizes?.medium+'/'+item?.photo) : 'assets/images/user-img-icon.jpg'">
-                <div class="media-body">
-                  <h6 class="text-capitalize">
-                    {{item?.city ? item?.city : ''}}
-                    {{item?.state ? ', ' + item?.state : ''}}
-                    <span class="text-uppercase">
-                      {{item?.country ? ', ' + item?.country : ''}}
+
+    <ng-container *ngIf="savedProfile?.length; else elseTemplate">
+      <!-- {{chunk(savedProfile, 3) | json}} -->
+      <ng-container *ngFor="let row of chunk(savedProfile, 3); let i = index">
+        <div class="row mb-5">
+          <ng-container *ngFor="let item of row">
+            <div class="col-lg-4" *ngIf="!utilsHelperService.isEmptyObj(item)">
+              <div class="card job-card sm" >
+                <div class="card-body">
+                  <a href="job-candidate-profile-view.html">
+                    <h5 class="text-capitalize mb-0">
+                      {{item?.first_name + ' ' + item?.last_name}}
+                    </h5>
+                    <h5 class="text-capitalize"><small *ngIf="item?.job_role">{{item?.job_role}}</small></h5>
+                  </a>
+                  <!-- <div [ngClass]="{'active': savedProfiles?.includes(item?.id)}" (click)="onSaveProfile(item)" class="save-icon" data-toggle="tooltip" title="Save"><i class="far fa-bookmark"></i></div> -->
+                  <div  (click)="onSaveProfile(item, i)" class="save-icon active" data-toggle="tooltip" title="Save"><i class="far fa-bookmark"></i></div>
+                  <div class="media">
+                    <img style="width:36px;" [src]="item?.photo ? (savedProfileMeta?.photo?.path+'/'+ savedProfileMeta?.photo?.folder+'/'+savedProfileMeta?.photo?.sizes?.medium+'/'+item?.photo) : 'assets/images/user-img-icon.jpg'">
+                    <div class="media-body">
+                      <h6 class="text-capitalize">
+                        {{item?.city ? item?.city : ''}}
+                        {{item?.state ? ', ' + item?.state : ''}}
+                        <span class="text-uppercase">
+                          {{item?.country ? ', ' + item?.country : ''}}
+                        </span>
+                      </h6>
+                      <h6 class="text-capitalize" *ngIf="(item?.job_type || item?.job_type == 0)">{{(item?.job_type || item?.job_type == 0) ? sharedService.onGetJobType(item?.job_type) : ''}}</h6>
+                    </div>
+                  </div>
+                  <div class="mt-1">
+                    <span data-toggle="modal" data-target="#exampleModal">
+                      <a
+                      [class.disabled]="!onGetFilteredValue(item?.doc_resume)"
+                      (click)="onGetFilteredValue(item?.doc_resume) && onToggleResumeForm(true, (savedProfileMeta?.doc_resume?.path + '/' + savedProfileMeta?.doc_resume?.folder + '/' + onGetFilteredValue(item?.doc_resume)))"
+                      class="btn btn-outline-blue btn-sm mr-2" href="javascript:;">
+                      <i class="fas fa-file-alt"></i> {{"dashboard.resume" | translate}}</a>
                     </span>
-                  </h6>
-                  <h6 class="text-capitalize" *ngIf="(item?.job_type || item?.job_type == 0)">{{(item?.job_type || item?.job_type == 0) ? sharedService.onGetJobType(item?.job_type) : ''}}</h6>
+                    <span data-toggle="modal" data-target="#notes">
+                      <a (click)="onToggleNotesViewModal(true)" class="btn btn-outline-green btn-sm" href="javascript:;">
+                      <i class="fas fa-edit"></i>{{"home.notes" | translate}}</a>
+                    </span>
+                  </div>
                 </div>
               </div>
-              <div class="mt-1">
-                <span data-toggle="modal" data-target="#exampleModal">
-                  <a
-                  [class.disabled]="!onGetFilteredValue(item?.doc_resume)"
-                  (click)="onGetFilteredValue(item?.doc_resume) && onToggleResumeForm(true, (savedProfileMeta?.doc_resume?.path + '/' + savedProfileMeta?.doc_resume?.folder + '/' + onGetFilteredValue(item?.doc_resume)))"
-                  class="btn btn-outline-blue btn-sm mr-2" href="javascript:;">
-                  <i class="fas fa-file-alt"></i> {{"dashboard.resume" | translate}}</a>
-                </span>
-                <span data-toggle="modal" data-target="#notes">
-                  <a (click)="onToggleNotesViewModal(true)" class="btn btn-outline-green btn-sm" href="javascript:;">
-                  <i class="fas fa-edit"></i>{{"home.notes" | translate}}</a>
-                </span>
-              </div>
             </div>
-          </div>
+          </ng-container>
         </div>
-      </div>
+      </ng-container>
     </ng-container>
+    <ng-template #elseTemplate>
+      <div style="min-height: 180px;">
+        No record found
+      </div>
+    </ng-template>
 
+
+    <div class="d-flex justify-content-center" *ngIf="((savedProfileMeta?.count > 0 && savedProfileMeta?.total > 1) && (savedProfileMeta?.total != savedProfile?.length))">
+      <button (click)="onLoadMoreJob()" class="btn btn-theme-blue" type="button">
+        Load More
+      </button>
+    </div>
 
   </div>
 </section>
