--- a/frontend/src/app/modules/features/user/candidate-job-matches/candidate-job-matches.component.html
+++ b/frontend/src/app/modules/features/user/candidate-job-matches/candidate-job-matches.component.html
@@ -53,7 +53,7 @@
                         </span>
                       </h6>
                       <form class="form-inline">
-                        <a href="#" class="mr-3" data-toggle="modal" data-target="#matchpostModal">
+                        <a  (click)="onViewOtherMatches()" href="javascript:;" class="mr-3" data-toggle="modal" data-target="#matchpostModal">
                           <small><i class="fab fa-buffer"></i> View Other Matches</small>
                         </a>
                       </form>
