--- a/frontend/src/app/modules/features/user/user-dashboard/user-dashboard.component.html
+++ b/frontend/src/app/modules/features/user/user-dashboard/user-dashboard.component.html
@@ -43,23 +43,23 @@
               [ngClass]="{'active': currentTabInfo.tabNumber == 2}" class="nav-link" href="javascript:;">{{"dashboard.matches" | translate}}
               <small>(39)</small></a>
           </li>
-          <li class="nav-item">
+          <!-- <li class="nav-item">
 						<a (click)="onTabChange({tabName: 'visaSponsored', tabNumber: 3})"
             [ngClass]="{'active': currentTabInfo.tabNumber == 3}" class="nav-link" href="javascript:;">
             {{"dashboard.visaSponsored" | translate}}  <small>(28)</small></a>
-					  </li>
+					  </li> -->
           <li class="nav-item">
             <a (click)="onTabChange({tabName: 'applied', tabNumber: 4})"
               [ngClass]="{'active': currentTabInfo.tabNumber == 4}" class="nav-link" href="javascript:;">
               {{"dashboard.applied" | translate}}
               <small>(12)</small></a>
           </li>
-          <li class="nav-item">
+          <!-- <li class="nav-item">
             <a (click)="onTabChange({tabName: 'shortlisted', tabNumber: 5})"
               [ngClass]="{'active': currentTabInfo.tabNumber == 5}" class="nav-link" href="javascript:;">
               {{"dashboard.shortlisted" | translate}}
               <small>(07)</small></a>
-          </li>
+          </li> -->
           <li class="nav-item">
             <a (click)="onTabChange({tabName: 'resume', tabNumber: 6})"
               [ngClass]="{'active': currentTabInfo.tabNumber == 6}" class="nav-link" href="javascript:;">
@@ -78,14 +78,14 @@
 <app-matching-job *ngIf="currentTabInfo.tabNumber == 2">
 </app-matching-job>
 
-<app-visa-sponsored *ngIf="currentTabInfo.tabNumber == 3">
-</app-visa-sponsored>
+<!-- <app-visa-sponsored *  ngIf="currentTabInfo.tabNumber == 3">
+</app-visa-sponso red> -->
 
 <app-applied-job *ngIf="currentTabInfo.tabNumber == 4">
 </app-applied-job>
 
-<app-shortlisted-job *ngIf="currentTabInfo.tabNumber == 5">
-</app-shortlisted-job>
+  <!-- <app-shortlisted-job *ngIf="currentTabInfo.tabNumber == 5">
+  </app-shortlisted-job> -->
 
 <app-user-resume *ngIf="currentTabInfo.tabNumber == 6">
 </app-user-resume>
